--- a/AndroidEcommerce/app/src/main/res/values/strings.xml
+++ b/AndroidEcommerce/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Android Ecommerce</string>
+
+    <string name="FACEBOOK_APP_ID">393481931501946</string>
+    <string name="ACCOUNT_KIT_CLIENT_TOKEN">b7eac1ad652344fb0eb6baa73efeb1b3</string>
+
 </resources>
